initial scale displays
